# sparkle

./: .env  Cargo.toml  audio.rs  build.rs  config.toml  powerful-anchor-425421-n2-99c4b6f4ca86.json  script.py
.cargo/: config.toml
Game Dev/: achievement_system.h  advanced_gameplay_systems.md  ai_commentary_system.h  ai_director.h  ai_system.h  ai_voice_generator.h  anti_cheat_economy.h  anti_cheat_system.h  challenge_system.h  character_attributes.h  character_fidelity_system.h  character_progression.md  character_roster.md  commentary_ai_brain.h  commentary_content_manager.h  commentary_guidelines.md  community_features.md  content_creation.h  content_guidelines.md  crowd_energy_system.h  customization_system.md  dev_mode.h  development_schedule.md  development_setup.md  difficulty_manager.h  dlc_manager.h  economy_guidelines.md  economy_system.h  esports_features.md  fair_play_policy.md  file_compression.h  free_to_play_system.h  game_design_doc.md  game_modes_detailed.md  game_specs.md  game_state_manager.h  gameplay_mechanics.md  live_service_roadmap.md  matchmaking_system.h  mocap_processing.h  (+29 more)
migrations/: 20240101000000_initial_schema.sql
scripts/: setup_database.ps1  setup_db.sql
sparkle/: Cargo.toml  build.rs
sparkle/src/: Cargo.toml  audio.rs  config.rs
sparkle/src/ai/: coding_knowledge.rs  consciousness_engine.rs  ethical_core.rs  hybrid_processor.rs  neural_chat.rs
sparkle/src/automation/: coordinator.rs  mod.rs  task_manager.rs
sparkle/src/autonomy/: mod.rs
sparkle/src/brand_deals/: evaluator.rs  negotiator.rs
sparkle/src/community/: manager.rs
sparkle/src/content/: creator.rs  viral_generator.rs
sparkle/src/database/: connection.rs
src/: error.rs  lib.rs  main.rs  text_filter.rs  twitch.rs  vtuber.rs
src/ai/: autonomous_learning.rs  game_integration.rs  hybrid_processor.rs  neural_chat.rs  personality_core.rs  resource_manager.rs  stream_engagement.rs
src/apps/: mod.rs
src/automation/: system_integrator.rs  task_manager.rs  task_scheduler.rs
src/autonomy/: controller.rs  decision_engine.rs  stream_manager.rs
src/awards/: eligibility_tracker.rs
src/config/: model_config.rs
src/constants/: strings.rs
src/database/: connection.rs  init.rs  mod.rs  models.rs  schema.rs
src/discord/: manager.rs
src/emotions/: adapter.rs  mod.rs  processor.rs
src/emulator/: retroarch.rs
src/error_handling/: mod.rs
src/events/: subathon.rs
src/game/: competitive_mode.rs  input_handler.rs  state_manager.rs
src/games/: input_system.rs  launcher.rs  mod.rs  traits.rs
src/gaming/: knowledge_base.rs
src/integration/: content_bridge.rs  controller.rs  mod.rs  performance.rs
src/knowledge/: auto_updater.rs  base.rs  mod.rs  network_knowledge.rs  security_knowledge.rs
src/legal/: tos_analyzer.rs
src/maintenance/: model_manager.rs  scheduler.rs
src/memory/: cache.rs  context_manager.rs  system.rs
src/model/: consistency.rs  dance_rigging.rs  design_spec.rs  evolution.rs  manager.rs  mod.rs  natural_behavior.rs  quality_control.rs  tail_physics.rs  version_control.rs
src/moderation/: content_filter.rs  filter.rs  mod.rs
src/monitoring/: performance.rs
src/nlp/: processor.rs
src/obs/: controller.rs  mod.rs  overlay_theme_generator.rs  scene_generator.rs  scene_manager.rs  universal_manager.rs
src/performance/: cache_predictor.rs  load_balancer.rs  network_optimizer.rs  neural_optimizer.rs  optimizer.rs  query_optimizer.rs  thread_pool.rs
src/personality/: collab_personality.rs  engagement_optimizer.rs
src/reactions/: manager.rs
src/resource_management/: mod.rs
src/safety/: mod_system.rs  tos_compliance.rs
src/scrapers/: advanced_model_analyzer.rs  anime_scraper.rs  casp_scraper.rs  comptia_scraper.rs  ctf_scraper.rs  darkreading_scraper.rs  live2d_tutorial_scraper.rs  master_duel_scraper.rs  model_creation_analyzer.rs  security_scraper.rs  tech_knowledge_scraper.rs  tech_news_scraper.rs  tokusatsu_scraper.rs  video_content_analyzer.rs  video_knowledge_analyzer.rs  vtube_tutorial_analyzer.rs  youtube_analyzer.rs  youtube_personality_scraper.rs  youtube_search.rs
src/security/: ctf_system.rs  defense_system.rs  knowledge_base.rs  mod.rs  vpn_manager.rs
src/social/: algorithm_optimizer.rs  content_optimizer.rs  integrator.rs  subathon_manager.rs
src/stream/: interaction_handler.rs  mod.rs  scheduler.rs  session_manager.rs  title_generator.rs
src/streaming/: advanced_strategy.rs  (+4 more)
(+40 files in other folders)
