[package]
name = "kamen_sparkle"
version = "0.1.0"
edition = "2021"

[lib]
name = "kamen_sparkle"
path = "src/lib.rs"

[[bin]]
name = "kamen_sparkle"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }

# Voice and audio
base64 = "0.21"
cpal = "0.15"

# OBS integration
obws = "0.10"

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
ctrlc = "3.2"

# Security
native-tls = { version = "0.2", features = ["vendored"] }

[build-dependencies]
tonic-build = "0.9"
