[package]
name = "text-generation"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-bert = "0.21.0"
tch = "0.13.0"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
rand = "0.8"
twitch-irc = "5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
dotenv = "0.15"