[workspace]
members = ["sparkle"]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Your Name"]
description = "Sparkle Game Automation Framework"

[workspace.dependencies]
# Async Runtime and Networking
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
async-trait = "0.1.77"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"

# Error Handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Utilities
dotenv = "0.15.0"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.11.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
regex = "1.10.3"
fastrand = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
unicode-segmentation = "1.10"

# Process Management
sysinfo = "0.30.5"
memory-rs = "0.2.6"
process-memory = "0.5.0"

# GUI (Optional)
egui = "0.26.2"
eframe = "0.26.2"
